Add Vercel config to skip Electron build and rename build scripts

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
    "scripts": {
       "start": "electron .",
       "dev": "electron . --dev",
-      "build": "electron-builder build --win --publish never",
-      "build:dir": "electron-builder build --win --dir"
+      "build:electron": "electron-builder build --win --publish never",
+      "build:electron:dir": "electron-builder build --win --dir",
+      "build": "echo 'Static site - no build needed'"
    },
    "keywords": [
       "electron",
